<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sashok.todoo.EditItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tlEdit"
        android:id="@+id/tvEdit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txEdit"
        android:layout_below="@+id/tvEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/prio_value"
        android:prompt="@string/prio_prompt"
        android:layout_above="@+id/btCancel"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btEdit"
        android:id="@+id/button"
        android:layout_below="@+id/txEdit"
        android:layout_marginTop="100dp"
        android:onClick="onSave"
        android:layout_alignStart="@+id/txEdit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCancel"
        android:id="@+id/btCancel"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentEnd="true"
        android:onClick="onCancel" />
</RelativeLayout>
